git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@32594 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,12 @@ Versions
 
   Next Release
   {
- 
+    
+    # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute. 
+    BookkeepingSystem = bk_2011011401
+    
+    # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute.
+    NewBookkeepingSystem = bk_2011011401
   }
   
   v5r12-pre10
