New SAMsystem version sa_2011012001
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@32776 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,17 +4,21 @@ Versions
 
   Next Release
   {
-    
-    # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute. 
+
+    # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute.
     BookkeepingSystem = bk_2011011401
-    
+
     # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute.
     NewBookkeepingSystem = bk_2011011401
+
+    # CHANGE: LockSharedArea (check if CVMFS is used )
+    # CHANGE: SoftwareInstallation.py change the variable VO_LHCB_SW_DIR is we used AFS site.
+    SAMSystem = sa_2011012001
   }
-  
+
   v5r12-pre10
   {
-  
+
     # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
     # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed.
     # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
@@ -35,7 +39,7 @@ Versions
     # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
     # BUGFIX: I removed the pareseCommandline from the client.
     # FIX: from the old bkk:dirac-bookkeeping-gui - fix to properly initialize the configuration client
-    # CHANGE: The web interface has been updated to the new schema. Several methods are affected and they are fixed. 
+    # CHANGE: The web interface has been updated to the new schema. Several methods are affected and they are fixed.
     # CHANGE: allow the default config name and config version.
     NewBookkeepingSystem = bk_2011011201
 
@@ -108,7 +112,7 @@ Versions
 
   v5r12-pre9
   {
-  
+
     # FIX: dirac-bookkeeping-gui - fix to properly initialize the configuration client
     # BUGFIX: The getFilesWithAGivenDatasets return the summary when 0 files is selected. It is removed.
     # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
@@ -129,7 +133,7 @@ Versions
     # BUGFIX: The getFilesWithGivenDataSetsForUsers is didn't retuned all the information of files and it has Ganga problem with the summary.
     # BUGFIX: I removed the pareseCommandline from the client.
     # FIX: from the old bkk:dirac-bookkeeping-gui - fix to properly initialize the configuration client
-    # CHANGE: The web interface has been updated to the new schema. Several methods are affected and they are fixed. 
+    # CHANGE: The web interface has been updated to the new schema. Several methods are affected and they are fixed.
     # CHANGE: allow the default config name and config version.
     NewBookkeepingSystem = bk_2011011201
 
