--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -704,6 +704,25 @@ Versions
   }
 
   #Some backported bugfixes that have been deployed on-site to the production servers
+  v5r11p6
+  {
+    BookkeepingSystem = bk_2010101302
+    ConfigurationSystem = cs_2010072701
+
+    Core = co_2010112601
+
+    DataManagementSystem = dm_2010102103
+    Interfaces = if_2010121801
+    ProductionManagementSystem = pm_2010111301
+    ResourceStatusSystem = rs_2010101501
+    SAMSystem = sa_2010080302
+    TransformationSystem = ts_2010112202
+    #FIX : logical for for filemask
+    Workflow = wo_2010122101
+    WorkloadManagementSystem = wm_2010073002
+  }
+
+  #Some backported bugfixes that have been deployed on-site to the production servers
   v5r11p5
   {
     BookkeepingSystem = bk_2010101302
