Bookkeeping system should go to the new release.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@32994 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,10 +6,14 @@ Versions
   {
 
     # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute.
-    BookkeepingSystem = bk_2011011401
+    # CHANGE: The getFilesWithGivenDataSetsForUsers return value is changed. 
+    # BUGFIX: The gaudi option file didn't contained the files, because the file type was not in the poltype list. 
+    BookkeepingSystem = bk_2011012501
 
     # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute.
-    NewBookkeepingSystem = bk_2011011401
+    # CHANGE: The getFilesWithGivenDataSetsForUsers return value is changed. 
+    # BUGFIX: The gaudi option file didn't contained the files, because the file type was not in the poltype list.
+    NewBookkeepingSystem = bk_2011012501
 
     # CHANGE: LockSharedArea (check if CVMFS is used )
     # CHANGE: SoftwareInstallation.py change the variable VO_LHCB_SW_DIR is we used AFS site.
