--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,12 +6,12 @@ Versions
   {
 
     # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute.
-    # CHANGE: The getFilesWithGivenDataSetsForUsers return value is changed. 
-    # BUGFIX: The gaudi option file didn't contained the files, because the file type was not in the poltype list. 
+    # CHANGE: The getFilesWithGivenDataSetsForUsers return value is changed.
+    # BUGFIX: The gaudi option file didn't contained the files, because the file type was not in the poltype list.
     BookkeepingSystem = bk_2011012501
 
     # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute.
-    # CHANGE: The getFilesWithGivenDataSetsForUsers return value is changed. 
+    # CHANGE: The getFilesWithGivenDataSetsForUsers return value is changed.
     # BUGFIX: The gaudi option file didn't contained the files, because the file type was not in the poltype list.
     NewBookkeepingSystem = bk_2011012501
 
@@ -705,6 +705,25 @@ Versions
     # NEW: BKInputDataAgent, CondDBAgent -  use self.am_setOption( 'shifterProxy', 'ProductionManager' )
     # NEW: multiple agents - use self.am_setOption( 'shifterProxy', 'ProductionManager' )
     WorkloadManagementSystem = wm_2010120601
+  }
+
+  #Some backported bugfixes that have been deployed on-site to the production servers
+  v5r11p9
+  {
+    BookkeepingSystem = bk_2010101303
+    ConfigurationSystem = cs_2010072701
+
+    Core = co_2010112601
+
+    DataManagementSystem = dm_2010102103
+    Interfaces = if_2011012501
+    ProductionManagementSystem = pm_2010111301
+    ResourceStatusSystem = rs_2010101501
+    SAMSystem = sa_2010080302
+    TransformationSystem = ts_2010112204
+    #FIX : logical for for filemask
+    Workflow = wo_2011012501
+    WorkloadManagementSystem = wm_2010073002
   }
 
   #Some backported bugfixes that have been deployed on-site to the production servers
