--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -708,6 +708,25 @@ Versions
   }
 
   #Some backported bugfixes that have been deployed on-site to the production servers
+  v5r11p10
+  {
+    BookkeepingSystem = bk_2010101303
+    ConfigurationSystem = cs_2010072701
+
+    Core = co_2010112601
+
+    DataManagementSystem = dm_2010102103
+    Interfaces = if_2011012501
+    ProductionManagementSystem = pm_2010111301
+    ResourceStatusSystem = rs_2010101501
+    SAMSystem = sa_2010080302
+    TransformationSystem = ts_2010112205
+    #FIX : logical for for filemask
+    Workflow = wo_2011012501
+    WorkloadManagementSystem = wm_2010073002
+  }
+
+  #Some backported bugfixes that have been deployed on-site to the production servers
   v5r11p9
   {
     BookkeepingSystem = bk_2010101303
