git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@33555 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -1,4 +1,4 @@
-# $HeadURL$
+# $HeadURL: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk/LHCbDIRAC/versions.cfg $
 Versions
 {
 
@@ -18,6 +18,10 @@ Versions
     # CHANGE: LockSharedArea (check if CVMFS is used )
     # CHANGE: SoftwareInstallation.py change the variable VO_LHCB_SW_DIR is we used AFS site.
     SAMSystem = sa_2011012002
+    
+    # FIX: do not check pilots efficiency for resources
+    ResourceStatusSystem = rs_2011020801
+    
   }
 
   v5r12-pre10
