--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -711,6 +711,24 @@ Versions
     WorkloadManagementSystem = wm_2010120601
   }
 
+  v5r11p13
+  {
+    BookkeepingSystem = bk_2010101303
+    ConfigurationSystem = cs_2010072701
+    Core = co_2010112601
+    DataManagementSystem = dm_2010102103
+    Interfaces = if_2011012501
+    ProductionManagementSystem = pm_2010111301
+    
+    # FIX: do not check pilots efficiency for resources
+    ResourceStatusSystem = rs_2011020801
+    
+    SAMSystem = sa_2010080302
+    TransformationSystem = ts_2010112205
+    Workflow = wo_2011012501
+    WorkloadManagementSystem = wm_2010073002
+  }
+
   #wrong __init.py__
   v5r11p12
   {
