tags for Core, Workflow, Intefaces, RSS, Transformations
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@33728 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -26,6 +26,21 @@ Versions
     # FIX: do not check pilots efficiency for resources
     ResourceStatusSystem = rs_2011020801
     
+    # NEW: plugin for archival transformations
+    TransformationSystem = ts_2011021101
+    
+    # BUGFIX: correct report of LFN in JDL for the stripping case
+    # NEW: possibility to specify 'stripping' as appType of DaVinci  
+    # NEW: test and publish flag for every template (multiple testing possibilities)
+    # CHANGE: GaudiApplication produces only outputs with lowercase extensions
+    Workflow = wo_2011021101
+    
+    # BUGFIX: LFN construction perfected for lower and upper cases
+    Core = 2011021101
+    
+    # NEW: possibility to specify a list of multiple output data types (mainly for the stripping)
+    Interfaces = if_2011021101
+    
   }
 
   v5r12-pre10
