fix the tag name for Core
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@33760 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -27,7 +27,7 @@ Versions
     ConfigurationSystem = cs_2010072701
 
     # BUGFIX: LFN construction perfected for lower and upper cases
-    Core = 2011021101
+    Core = co_2011021101
 
     DataManagementSystem = dm_2011011302
 
