git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@33934 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+  	# FIX: avoid two SEs at the same site in Random plugin
+	TransformationSystem = ts_2011021401
   }
 
   v6r0-pre3
