git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@34068 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,6 +6,10 @@ Versions
   {
   	# FIX: avoid two SEs at the same site in Random plugin
 	TransformationSystem = ts_2011021502
+	
+	# FIX: Gauss options
+	Core = co_2011021602
+	
   }
 
   v6r0-pre3
