--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -7,6 +7,58 @@ Versions
 
   }
 
+  v6r0-pre5
+  {
+
+    # BUGFIX: When the data quality is not set for a given run the bkk report a error message. This error message changed to warn.
+    # BUGFIX: The getDescendents was broken when 1 file does not have a replica flag, the method now returns all the files.
+    # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute.
+    # CHANGE: The getFilesWithGivenDataSetsForUsers return value is changed.
+    # BUGFIX: The gaudi option file didn't contained the files, because the file type was not in the poltype list.
+    BookkeepingSystem = bk_2011021401
+
+    # BUGFIX: When the data quality is not set for a given run the bkk report a error message. This error message changed to warn.
+    # BUGFIX: The getDescendents was broken when 1 file does not have a replica flag, the method now returns all the files.
+    # BUGFIX: The JobType should be removed when the data quality is not defined for a run, because the JobType is not a job attribute.
+    # CHANGE: The getFilesWithGivenDataSetsForUsers return value is changed.
+    # BUGFIX: The gaudi option file didn't contained the files, because the file type was not in the poltype list.
+    NewBookkeepingSystem = bk_2011020801
+
+    ConfigurationSystem = cs_2010072701
+
+    # BUGFIX: LFN construction perfected for lower and upper cases
+    # FIX: Gauss options
+    # FIX: ProductionOutputData
+    Core = co_2011021701
+
+    DataManagementSystem = dm_2011011302
+
+    # NEW: possibility to specify a list of multiple output data types (mainly for the stripping)
+    Interfaces = if_2011021102
+
+    ProductionManagementSystem = pm_2011011201
+
+    # CHANGE: LockSharedArea (check if CVMFS is used )
+    # CHANGE: SoftwareInstallation.py change the variable VO_LHCB_SW_DIR is we used AFS site.
+    SAMSystem = sa_2011012002
+
+    # FIX: do not check pilots efficiency for resources
+    ResourceStatusSystem = rs_2011020801
+
+    # NEW: plugin for archival transformations
+    # FIX: avoid two SEs at the same site in Random plugin
+    TransformationSystem = ts_2011021701
+
+    # BUGFIX: correct report of LFN in JDL for the stripping case
+    # NEW: possibility to specify 'stripping' as appType of DaVinci
+    # NEW: test and publish flag for every template (multiple testing possibilities)
+    # CHANGE: GaudiApplication produces only outputs with lowercase extensions
+    Workflow = wo_2011021101
+
+    WorkloadManagementSystem = wm_2010121901
+
+  }
+
   v6r0-pre4
   {
 
