--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+	#BUGFIX: ProductionCleaningAgent was calling client method with wrong parameter 
+    TransformationSystem = ts_2011021801
   }
 
   v6r0-pre5
